convert to record